--- a/10-DOM-projects-karaKrus-nameBox.css
+++ b/10-DOM-projects-karaKrus-nameBox.css
@@ -1,16 +1,86 @@
 body {
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  height: 1200px;
+  background-image: url(karaKrusPics/body-image.jpeg);
+  
 }
 
-.karaKrus{
-  margin: 20px 20px 50px 20px;
+.contentPage {
+  background-color: white;
+  position: fixed;
+  min-width: 500px;
+  max-width: 2500px;
+  top: 0px;
+  bottom: 0px;
+  left: 20%;
+  right: 20%;
 }
 
+
+.nameBoxTitle {
+  color: beige;
+  font-size: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:rgb(82, 203, 252);
+ 
+}
 .karaKrusTitle {
-  font-size: 30px;
-  font-weight: bold;
-  padding: 10px 20px;
-  margin: 20px 0px 50px 0px;
+  color: beige;
+  font-size: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:rgb(82, 203, 252);
+ 
+}
+
+
+.nameBox {
+  width: 30%;
+  height: 40px;
+  position: fixed;
+  left: 30%;
+  right: 36%;
+}
+
+.karaKrus {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.karaAndKrus {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.responses {
+  font-size: 20px;
+  position: fixed;
+  bottom: 20%;
+  left: 30%;
+  right: 30%;
+}
+
+.submitButton {
+  height: 44.5px;
+  position: fixed;
+  left: 60%;
+  right: 32%;
+  font-size: 80%;
+}
+
+.kkTitle {
+  color: beige;
+  font-size: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color:rgb(82, 203, 252);
 }
 
 .Krus, .kara {
@@ -29,9 +99,12 @@ body {
   font-size: 14px;
   border: 0px;
   padding: 10px 15px;
-  margin-left: 140px;
-  margin-top: 50px;
+
   font-weight: bold;
   background-color: rgb(0, 0, 0);
   color: rgb(255, 255, 255);
+}
+
+.p {
+  margin: 1%;
 }
